--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,208 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Marko+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  list-style: none !important;
+  box-sizing: border-box !important;
+  text-decoration: none !important;
+}
+dl,
+ol,
+ul {
+  margin-top: 0;
+  margin-bottom: 0 !important;
+}
+ol,
+ul {
+  padding-left: 0 !important;
+}
+p {
+  margin-top: 0;
+  margin-bottom: 0 !important;
+}
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0 !important;
+}
+/* padding */
+.pt_53 {
+  padding-top: 53px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* gap */
+.gap_38 {
+  gap: 38px;
+}
+/* clr */
+.clr_yellow {
+  color: #fad300;
+}
+.nav_img_center {
+  top: -80%;
+  left: 46%;
+}
+.bg_header {
+  background-color: #e97219;
+}
+.nav_bg {
+  background-image: url("../public/image/png/nav_img_bg.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 14px 35px;
+}
+.hero_bg {
+  background-image: url("../public/image/png/hero-bg-img.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 24px;
+}
+.sec_two_bg {
+  background-image: url("../public/image/png/sec_two_bg.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.mx_w_1082 {
+  line-height: 120%;
+  max-width: 1082px;
+}
+.mx_w_799 {
+  margin-top: 16px;
+  line-height: 163%;
+  max-width: 799px;
+}
+.btn_bg {
+  margin-top: 44px;
+  padding: 16px 37px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../public/image/png/button.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.lh_Trimurti {
+  line-height: 150%;
+  margin-top: 115px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* root */
+.ff_Poppins {
+  font-family: "Poppins";
+}
+.ff_marko {
+  font-family: "Marko One";
+}
+.clr_gray {
+  color: #636363;
+}
+.fs_16 {
+  font-size: 16px;
+}
+.fs_28 {
+  font-size: 28px;
+}
+.fs_48 {
+  font-size: 48px;
+}
+.fs_60 {
+  font-size: 60px;
+}
+.fw_400 {
+  font-weight: 400;
+}
+.fw_500 {
+  font-weight: 500;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.fw_600 {
+  font-weight: 600;
+}
+.fw_700 {
+  font-weight: 700;
+}
+/* section two */
+.clr_orange {
+  line-height: 150%;
+  color: #e97219;
+}
+.dark_red {
+  color: #470000;
+}
+.max_w {
+  max-width: 674px;
+}
+.clr_light_black {
+  color: #343434;
+}
+.souls_para_w {
+  max-width: 950px;
+  line-height: 160%;
+}
+.img_radius {
+  border-radius: 6px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (max-width: 992px) {
+  label[for="menuicon"] {
+    cursor: pointer;
+    width: 34px;
+    height: 28px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+  }
+  label[for="menuicon"] > span {
+    width: 100%;
+    height: 5px;
+    background-color: black;
+  }
+  .sm-screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: #e97219;
+    top: 0;
+    left: -100%;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 300ms ease-in-out;
+  }
+  input[type="checkbox"]:checked + ul.sm-screen {
+    left: 0;
+    opacity: 100 !important;
+    pointer-events: all;
+  }
+
+  .ms-5 {
+    margin-left: 0 !important;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .home {
+    font-size: 30px;
+  }
+  .nav-lnk {
+    font-size: 30px;
   }
 }
